# gpgpu-rs

./: =  Cargo.toml  LICENSE  README.md
examples/: pde.rs  random.rs
src/: HandlerBuilder.rs  \  algorithms.rs  data_file.rs  descriptors.rs  dim.rs  file.rs  functions.rs  handler.rs  integrators.rs  kernels.rs  lib.rs  main.rs  pde_lexer.lalrpop  pde_parser.rs  philox.rs
src/handler/: handler_builder.rs
src/integrators/: pde_ir.rs  pde_parser.rs
src/integrators/pde_ir/: kt.rs  kt_scheme.rs  lexer_compositor.rs
src/pde_parser/: pde_ir.rs  pde_lexer.rs
src/pde_parser/pde_ir/: kt_scheme.rs  lexer_compositor.rs
src/pde_parser/pde_lexer/: fun.rs  math.rs  var.rs
tests/: test.rs
