[package]
name = "gpgpu"
version = "0.1.0"
authors = ["xayon40-12 <touroux.nathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
decorum = "0.3.1"
